# warp

./: .formatter.exs  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTES.md  README.md  ROADMAP.md  Warpfile  Workspace.json  Workspace.toml  appveyor.yml  deno.json  rust-toolchain.toml  taplo.toml  warp-outputs  zap-outputs
cli/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NOTES.md  README.md  flags.rs  main.rs  test.sh
cli/.github/workflows/: workflow.yml
cli/bench/: gen.rb
cli/commands/: bootstrap.rs  build.rs  depgraph.rs  fetch.rs  fmt.rs  info.rs  mod.rs  new.rs  pack.rs  rules.rs  run.rs  setup-darwin.sh  setup-linux.sh  setup.rs  shell.rs  signature.rs  test.rs
cli/core/: Cargo.toml  alias.rs  analyzer_service_manager.rs  api.rs  archive.rs  archive_manager.rs  artifact_store.rs  build.rs  build_coordinator.rs  build_executor.rs  build_opts.rs  build_queue.rs  build_results.rs  build_worker.rs  build_worker_2.rs  buildfile.rs  buildfile2.rs  buildfile_2.rs  cache.rs  code_db.rs  command_runner.rs  compute_target.js  computed_target.rs  dep_graph.rs  dependency.rs  dependency_file.rs  dependency_manager.rs  dependency_resolver.rs  event.rs  event_channel.rs  executable_target.rs  execution_environment.rs  execution_mode.rs  file_scanner.rs  git_hooks.rs  label.rs  label2.rs  label_registry.rs  label_resolver.rs  label_store.rs  (+52 more)
cli/core/actions/: action.rs  copy.rs  download.rs  exec.rs  extract.rs  mod.rs  run_shell.rs  set_permissions.rs  write_file.rs
cli/core/git_hooks/: pre-receive
cli/core/tests/: .gitignore
cli/docs/: 404.html  CNAME  index.html  introduction.html  print.html  searchindex.js  searchindex.json
cli/docs/changelog/: v0.4.0.html  v0.4.1.html  v0.4.2.html
cli/docs/contrib/: architecture.html  building.html  index.html  styleguide.html
cli/docs/examples/: hello-world.html  index.html
cli/docs/getting-started/: first-steps.html  how-zap-works.html  index.html  installation.html
cli/docs/guides/: custom-rules.html  index.html  mix.html  rebar3.html
cli/docs/ref/: actions.html  cli.html  index.html  rules.html  toolchains.html  workspace.html
cli/examples/basic/: README.md  hello_world.erl  workspace
cli/examples/native/: hello_world.ml  workspace
cli/ext/: Cargo.toml  lib.rs
cli/ext/rules/: elixir_library.js  erlang_library.js  mod.rs
cli/ext/toolchains/: archive.js  caramel.js  clojerl.js  deno.js  elixir.js  erlang.js  mod.rs
cli/manual/: book.toml
cli/manual/src/: SUMMARY.md  introduction.md
cli/manual/theme/: index.hbs
cli/mark2/: Cargo.toml  build.rs  drive.rs  lib.rs  opts.rs
cli/mark2/actions/: action.rs  exec.rs  mod.rs  verify_checksum.rs
cli/mark2/artifacts/: local_store.rs  mod.rs  remote_store.rs
cli/mark2/codedb/: source_manager.rs
cli/mark2/config/: config_file.rs  mod.rs
cli/mark2/events/: mod.rs
cli/mark2/executor/: mod.rs
cli/mark2/model/: archive.rs  mod.rs
cli/mark2/planner/: executable_target.rs  mod.rs
cli/mark2/resolver/: goal.rs  mod.rs  target.rs  target_id.rs  target_registry.rs
cli/mark2/rules/: config.rs  mod.rs  rule_config_expander.rs  rule_exec_env_ffi.rs  rule_executor.rs  rule_store.rs
cli/mark2/tests/: warp_drive_tests.rs
cli/mark2/util/: file_scanner.rs
cli/mark2/worker/: coordinator.rs  local_worker.rs  mod.rs  opts.rs  pool.rs  shared_context.rs  task.rs  task_queue.rs  task_results.rs
cli/mark2/workspace/: finder.rs  manager.rs  mod.rs  paths.rs  workspace.rs
cli/reporter/: lifter_reporter.rs  mod.rs  status_reporter.rs
cli/tests/: e2e_tests.rs  zap_bin_test.rs
cli/tests/snapshots/: e2e_tests__verl_build.snap.new  zap_bin_test__zap_rules_dump_actions.snap  zap_bin_test__zap_rules_dump_outputs.snap  zap_bin_test__zap_toolchains_list_available.snap  (+1 more)
core/: Cargo.toml  build.rs  buildfile.rs  buildscript_worker.rs  compute_target.js  computed_target.rs  dep_graph.rs  dependency.rs  drive.rs  file_scanner.rs  lib.rs  local_cache.rs  local_execution_context.rs  local_sandbox.rs  local_worker.rs  prelude.js  rule.rs  rule_config.rs  rule_exec_env.rs  toolchain.rs  toolchain_manager.rs  workspace_builder.rs  workspace_parser.rs  workspace_paths.rs  workspace_scanner.rs
core/actions/: action.rs  exec.rs  mod.rs  run_shell.rs
core/archive/: manager.rs  mod.rs
core/benches/: source_hashing.rs
core/code/: db.rs  error.rs  manager.rs  mod.rs  source_hasher.rs
core/config/: host_env.rs  mod.rs
core/events/: channel.rs  consumer.rs  event.rs  mod.rs
core/executor/: error.rs  mod.rs
core/model/: concrete_target.rs  dependencies.rs  env.rs  executable_spec.rs  goal.rs  mod.rs  provided_files.rs  requirement.rs  signature.rs  signature_id.rs  source_set.rs  target.rs  target_id.rs  task.rs  task_id.rs  test_matcher.rs  test_matcher_id.rs  test_runner.rs
core/os/: mod.rs
core/planner/: default.rs  default_planner_context.rs  error.rs  mod.rs
core/resolver/: boot_resolver.rs  default.rs  error.rs  fs_resolver.rs  mod.rs  net_resolver.rs  signature_registry.rs  target_registry.rs
core/rules/: mod.rs  store.rs
core/store/: artifact_id.rs  artifact_manifest.rs  default.rs  error.rs  fetcher.rs  local.rs  manifest_url.rs  mod.rs  package.rs  package_manifest.rs  packer.rs  public.rs
core/sync/: mod.rs
core/testing/: matcher_registry.rs  mod.rs
core/tests/: warp_drive_tests.rs
core/tricorder/: context.rs  grpc.rs  manager.rs  mod.rs  registry.rs
core/util/: file_scanner.rs  from_file.rs  process_pool.rs  serde.rs
core/worker/: coordinator.rs  mod.rs  pool.rs  task.rs  task_queue.rs  task_registry.rs  task_results.rs
core/workspace/: finder.rs  manager.rs  mod.rs  paths.rs
lib/crane-bin/: Cargo.toml
lib/zap-bin/: Cargo.toml
lib/zap-build-engine/: Cargo.toml
lib/zap-buildscript/: Cargo.toml
lib/zap-core/: Cargo.toml
lib/zap-project/: Cargo.toml
rust/tricoder/: Build.json  Cargo.toml  build.rs
rust/tricorder/: Build.json  Cargo.toml  build.rs
tree-sitter/parser/: Build.json  Cargo.toml  main.rs
tricorders/rust/: Cargo.toml  build.rs
(+1331 files in other folders)
