[package]
name = "crane"
version = "0.3.7"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
fern = { version = "0.6", features = [ "colored" ] }
glob = "0.3"
home = "0.5"
log = "0.4"
guess_host_triple = "0.1"
petgraph = "0.5"
rust-crypto = "0.2"
structopt = "0.3"
toml = "0.5"
