[workspace]
members = [
  "cli",
  "core",
  "tests/test_tricorder",
  "tricorders/rust",
]
resolver="2"

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
anyhow = "1"
aquamarine = "0.2"
assert_cmd = { version = "2", features = ["color"] }
assert_fs = { version = "1", features = ["color"] }
assert_matches = "1"
async-compression = { version = "0.3", features = [ "futures-io", "tokio", "stream", "all-algorithms", ] }
async-stream = "0.3"
async-trait = "0.1"
async_zip = "0.0.7"
bincode = "1.3"
cc = "*"
chrono = "0.4"
console = "0.15"
criterion = { version = "0.4.0", features = ["async_tokio"] }
crossbeam = "0.8"
crossbeam-channel = "0.4.0"
crossterm = "0.23"
daggy = "0.8"
dashmap = "5.2"
deno_console = "0.91"
deno_core = "0.173"
derive_builder = "0.11"
dialoguer = "0.10"
dir-diff = "0.3"
directories = "4.0"
env_logger = "0.9"
fixedbitset = "0.4"
flate2 = "1.0"
fs_extra = "1.2"
futures = "0.3"
fxhash = "0.2"
glob = "0.3"
globset = "0.4"
guess_host_triple = "0.1"
human-panic = "1.0"
humantime = "2"
hyper = "0.14.24"
ignore = "0.4"
indicatif = "0.16"
insta = "1.14"
json_comments = "0.2"
log = "0.4"
mockito = "0.31"
nix = "0.26"
notify = "5.0.0-pre.15"
num_cpus = "1"
once_cell = "1.14"
openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"]  }
petgraph = "0.6"
predicates = "2.1.5"
prost = "0.11"
prost-types = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["stream", "json", "gzip"] }
rexpect = "0.5"
rusqlite = { version = "0.28", features = ["bundled"] }
rust-crypto = "0.2"
seahash = "4.1.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
shuttle = "0.6.0"
structopt = "0.3"
tar = "0.4"
tempdir = "0.3"
tempfile = "3.3"
termcolor = { version = "1.1" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serde = "0.8"
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["rt", "compat"] }
tonic = "0.8"
tonic-build = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
v8 = "0.60"
whoami = "1.2"
