[package]
name = "zap-core"
version = "0.5.0"
authors = ["Leandro Ostera <leandro@abstractmachines.dev>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
zap-ext = { path = "../ext", version = "*" }

anyhow = "1.0"
chrono = "0.4"
crossbeam = "0.8"
daggy = "0.8"
dashmap = "5.2"
deno_core = "0.130"
directories = "4.0"
env_logger="0.9"
fixedbitset = "0.4"
fs_extra = "1.2"
futures = "0.3"
glob = "0.3"
guess_host_triple = "0.1"
log = "0.4"
petgraph = "0.6"
regex = "1"
rust-crypto = "0.2"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
v8 = "0.42"
whoami = "1.2"
