[package]
name = "warp-core"
version = "0.0.0"
authors = ["Leandro Ostera <leandro@warp.build>"]
description = "The Warp Core - Mark II"
edition = "2021"

[lib]
path = "lib.rs"


[[bench]]
name = "source_hashing"
harness = false

[dependencies]

anyhow = "1"
aquamarine = "0.2"
assert_cmd = {version = "2", features = ["color"]}
assert_fs = {version = "1", features = ["color"]}
assert_matches = "1"
async-compression = { version = "0.3", features = ["futures-io", "tokio","stream", "all-algorithms"] }
async-stream = "0.3"
# async-tar = "0.4.2"
async-trait = "0.1"
async_zip = "0.0.7"
bincode = "1.3"
chrono = "0.4"
criterion = { version = "0.4.0", features = ["async_tokio"] }
crossbeam = "0.8"
daggy = "0.8"
dashmap = "5.2"
deno_console = "0.91"
deno_core = "0.173"
derive_builder = "0.11"
dir-diff = "0.3"
directories = "4.0"
env_logger="0.9"
fixedbitset = "0.4"
fs_extra = "1.2"
futures = "0.3"
fxhash = "0.2"
glob = "0.3"
globset = "0.4.9"
guess_host_triple = "0.1"
hyper = "0.14.24"
ignore = "0.4"
json_comments = "0.2"
log = "0.4"
mockito = "0.31"
nix = "0.26"
num_cpus = "1"
once_cell = "1.14"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"]  }
petgraph = "0.6"
predicates = "2.1.5"
prost = "0.11"
prost-types = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["stream", "json", "gzip"] }
rexpect = "0.5"
rusqlite = "0.28"
rust-crypto = "0.2"
seahash = "4.1.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
shuttle = "0.6.0"
structopt = "0.3"
tar = "0.4"
tempdir = "0.3"
tempfile = "3.3"
termcolor = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-serde = "0.8"
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["rt", "compat"] }
tonic = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics" ] }
v8 = "0.60"
whoami = "1.2"

[build-dependencies]

anyhow = "1.0"
deno_console = "0.91"
deno_core = "0.173"
tonic-build = "0.8"
