[package]
name = "zap-core"
version = "0.5.0"
authors = ["Leandro Ostera <leandro@abstractmachines.dev>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
zap-ext = { path = "../ext", version = "*" }

anyhow = "1.0"
assert_matches = "1"
async-stream = "0.3"
chrono = "0.4"
crossbeam = "0.8"
daggy = "0.8"
dashmap = "5.2"
deno_core = "0.130"
directories = "4.0"
env_logger="0.9"
fixedbitset = "0.4"
fs_extra = "1.2"
futures = "0.3"
fxhash = "0.2"
glob = "0.3"
guess_host_triple = "0.1"
reqwest = { version = "0.11", features = ["stream"] }
log = "0.4"
num_cpus = "1"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"]  }
petgraph = "0.6"
regex = "1"
rust-crypto = "0.2"
seahash = "4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
termcolor = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"
url = "2"
uu_chmod = "0"
v8 = "0.42"
whoami = "1.2"
async_zip = "0.0.7"


[build-dependencies]
deno_core = "0.130"
