[workspace]

[package]
name = "warp-core-mark2"
version = "0.0.0"
authors = ["Leandro Ostera <leandro@warp.build>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]

anyhow = "1.0"
aquamarine = "0.2.2"
assert_matches = "1"
async-compression = { version = "0.3", features = ["all"] }
async-stream = "0.3"
async-tar = "0.4.2"
async-trait = "0.1"
async_zip = "0.0.7"
bincode = "1.3.3"
chrono = "0.4"
crossbeam = "0.8"
daggy = "0.8"
dashmap = "5.2"
deno_console = "0.72"
deno_core = "0.154"
derive_builder = "0.11.2"
directories = "4.0"
env_logger="0.9"
fixedbitset = "0.4"
fs_extra = "1.2"
futures = "0.3"
fxhash = "0.2"
glob = "0.3"
globset = "0.4.9"
guess_host_triple = "0.1"
ignore = "0.4"
json_comments = "0.2"
log = "0.4"
num_cpus = "1"
once_cell = "1.14"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"]  }
petgraph = "0.6"
prost = "0.11.2"
prost-types = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11", features = ["stream", "json", "gzip"] }
rusqlite = "0.28.0"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
structopt = "0.3"
tar = "0.4.38"
tempfile = "3.3"
termcolor = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serde = "0.8"
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["rt", "compat"] }
tonic = "0.8.2"
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics" ] }
v8 = "0.51"
whoami = "1.2"

[build-dependencies]

anyhow = "1.0"
deno_console = "0.72"
deno_core = "0.154"
tonic-build = "0.8.2"


