[package]
name = "zap-build"
version = "0.4.1"
authors = ["Leandro Ostera <leandro@ostera.io>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
zap-build-engine = { path = "../zap-build-engine", version = "0.4.1" }
zap-core = { path = "../zap-core", version = "0.4.1" }

anyhow = "1.0"
chrono = "0.4"
env_logger="0.8"
futures = "0.3"
guess_host_triple = "0.1"
log = "0.4"
structopt = "0.3"
termcolor = "1.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
insta = "1.5"
assert_cmd = "1.0"
dir-diff = "0.3"
