[package]
name = "zap-build"
version = "0.4.2"
authors = ["Leandro Ostera <leandro@ostera.io>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
zap-build-engine = { path = "../zap-build-engine", version = "*" }
zap-core = { path = "../zap-core", version = "*" }

anyhow = "1.0"
human-panic = "1.0"
chrono = "0.4"
env_logger="0.9"
futures = "0.3"
guess_host_triple = "0.1"
log = "0.4"
structopt = "0.3"
termcolor = "1.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
insta = "1.14"
assert_cmd = "2"
dir-diff = "0.3"
