[package]
name = "zap-build-engine"
version = "0.4.2"
authors = ["Leandro Ostera <leandro@ostera.io>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
license = "Apache-2.0"
edition = "2018"

[dependencies]
zap-buildscript = { path = "../zap-buildscript", version = "*" }
zap-core = { path = "../zap-core", version = "*" }

anyhow = "1.0"
chrono = "0.4"
log = "0.4"

dashmap = "5.2"
petgraph = "0.6"
rust-crypto = "0.2"
fs_extra = "1.2"
