[package]
name = "zap-buildscript"
version = "0.4.2"
authors = ["Leandro Ostera <leandro@ostera.io>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
license = "Apache-2.0"
edition = "2018"

[dependencies]
thiserror = "1.0"
chrono = "0.4"
log = "0.4"

rusty_v8 = "0.32"
deno_core = "0.130"
deno_runtime = "0.56"

futures = "0.3"
