[package]
name = "zap-core"
version = "0.4.2"
authors = ["Leandro Ostera <leandro@ostera.io>"]
description = "A simple, fast, and correct build system for modern polyglot teams"
license = "Apache-2.0"
edition = "2018"

[dependencies]
zap-buildscript = { path = "../zap-buildscript", version = "*" }

anyhow = "1.0"
chrono = "0.4"
log = "0.4"

crossbeam = "0.8"
daggy = "0.8"
dashmap = "5.2"
deno_core = "0.130"
directories = "4.0"
env_logger="0.9"
glob = "0.3"
guess_host_triple = "0.1"
petgraph = "0.6"
regex = "1"
rust-crypto = "0.2"
serde_json = "1.0"
toml = "0.5"
whoami = "1.2"
