[package]
name = "zap-project"
version = "0.4.0"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zap-core = { path = "../zap-core" }
zap-buildscript = { path = "../zap-buildscript" }
zap-toolchains = { path = "../zap-toolchains" }
zap-rules = { path = "../zap-rules" }

anyhow = "1.0"
dashmap = "4.0"
directories = "3.0"
env_logger="0.8"
glob = "0.3"
log = "0.4"
regex = "1"
serde_json = "1.0"
toml = "0.5"
