[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.2"
tokio = { version = "1", features = ["full"] }
prost = "0.11.2"

[build-dependencies]
tonic-build = "0.8.2"