[package]
name = "tricorder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tricorder"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
assert_fs = { version = "1", features = ["color"] }
derive_builder = "0.11"
fxhash = "0.2"
insta = "1.28.0"
predicates = "2.1.5"
prettyplease="0.1.23"
prost = "0.11.2"
prost-types = "0.10"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "1.0.109", features = ["full", "parsing", "extra-traits", "visit", "visit-mut", "fold"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.8.2"
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"
url = "2"

[build-dependencies]
tonic-build = "0.8.2"
