[package]
name = "tricorder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tricorder"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
assert_fs = { version = "1", features = ["color"] }
cargo_toml = "0"
dashmap = "5.2"
derive_builder = "0"
futures = "0.3"
fxhash = "0"
gitignore = "1"
insta = "1"
predicates = "2"
prettyplease = "0"
prost = "0"
prost-types = "0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
syn = { version = "1", features = [
  "full",
  "parsing",
  "extra-traits",
  "visit",
  "visit-mut",
  "fold",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tonic = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"
url = "2"

[build-dependencies]
tonic-build = "0.8"
