[package]
name = "tricorder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tricorder"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
assert_fs = { version = "1", features = ["color"] }
assert_matches = "1"
cargo = { version = "0.69", features = ["vendored-openssl"] }
dashmap = "5.2"
derive_builder = "0"
env_logger = "0.9"
futures = "0.3"
fxhash = "0"
ignore = "0.4"
insta = "1"
log = "0.4"
once_cell = "1"
predicates = "2"
prettyplease = "0.1.23"
prost = "0"
prost-types = "0"
reqwest = { version = "0", features = ["stream", "json", "gzip"] }
semver = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_repr = "0.1.12"
syn = { version = "1", features = [
  "full",
  "parsing",
  "extra-traits",
  "visit",
  "visit-mut",
  "fold",
] }
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tonic = "0.8"
url = "2"

[build-dependencies]
tonic-build = "0.8"
