[package]
name = "warp-tricorder-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "test-tricorder"
path = "src/main.rs"

[build-dependencies]
cc = { workspace = true }
tonic-build = { workspace = true }
