[package]
name = "tricorder-core"
version = "0.1.0"
authors = ["Calin Capitanu <calin@warp.build>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tonic = "0.8.2"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"
prost = "0.11.2"
prost-types = "0.10"
syn = { version = "1.0.109", features = ["full", "parsing", "extra-traits", "visit", "visit-mut", "fold"] }
insta = "1.28.0"
prettyplease="0.1.23"

[build-dependencies]
tonic-build = "0.8.2"
